--- a/src/css/rolagem.css
+++ b/src/css/rolagem.css
@@ -1,6 +1,6 @@
 * {
     scrollbar-width: thin;
-    scrollbar-color: #e228d8 #070d12;
+    scrollbar-color: #6ecff6 #070d12;
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -13,7 +13,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #e228d8;
+    background-color: #6ecff6;
     border-radius: 20px;
     border: 3px solid #070d12;
 }
