--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,7 @@ body{
 .cartao{
     background-color: #070d12;
     width: 370px;
-    border: 2px solid #e126d9;
+    border: 2px solid #6ecff6;
     border-radius: 10px;
     overflow:  hidden;
 }
@@ -32,7 +32,7 @@ body{
 
 .cartao .minhas-informacoes img{
     border-radius: 50px;
-    border: 4px solid #02d08f;
+    border: 4px solid #6ecff6;
 }
 
 .cartao .minhas-informacoes .name{
@@ -101,7 +101,7 @@ body{
 }
 
 .informacoes-abas .descricao span{
-    color: #02d08f;
+    color: #6ecff6;
 }
 
 .redes-sociais{
